[gd_scene load_steps=13 format=3 uid="uid://bc1j0tnlnf6p2"]

[ext_resource type="Script" path="res://sources/hud/Pausa.gd" id="1_nomq2"]
[ext_resource type="Texture2D" uid="uid://cs875cg88pdcu" path="res://assets/sprites/hud/Ajuste.png" id="2_wme5e"]

[sub_resource type="LabelSettings" id="LabelSettings_5m400"]
font_size = 96
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_lkglo"]
font_size = 32
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="Gradient" id="Gradient_ye0y1"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_v26lx"]
gradient = SubResource("Gradient_ye0y1")

[sub_resource type="LabelSettings" id="LabelSettings_yqg3s"]
font_size = 32
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_o34oh"]
font_size = 96
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_gxj6e"]
resource_name = "Appear"

[sub_resource type="Animation" id="Animation_coijd"]
resource_name = "Pausa"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SlideMas:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SlideMas:process_mode")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [4, 4, 3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Label:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("VolMas:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("SlideMus:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("SlideMus:process_mode")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [4, 4, 3]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("VolMus:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("SlideSFX:process_mode")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [4, 4, 3]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("SlideSFX:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("VolSFX:modulate")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("Voltar:process_mode")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [4, 4, 3]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("Voltar:modulate")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("Label2:modulate")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 0)]
}
tracks/13/type = "value"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("Continuar:modulate")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 0)]
}
tracks/14/type = "value"
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/path = NodePath("Continuar:process_mode")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/keys = {
"times": PackedFloat32Array(0, 0.1, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 4, 4]
}
tracks/15/type = "value"
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/path = NodePath("AjuVol:modulate")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 0)]
}
tracks/16/type = "value"
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/path = NodePath("AjuVol:process_mode")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/keys = {
"times": PackedFloat32Array(0, 0.1, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 4, 4]
}
tracks/17/type = "value"
tracks/17/imported = false
tracks/17/enabled = true
tracks/17/path = NodePath("VoltarMenu:modulate")
tracks/17/interp = 1
tracks/17/loop_wrap = true
tracks/17/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 0)]
}
tracks/18/type = "value"
tracks/18/imported = false
tracks/18/enabled = true
tracks/18/path = NodePath("VoltarMenu:process_mode")
tracks/18/interp = 1
tracks/18/loop_wrap = true
tracks/18/keys = {
"times": PackedFloat32Array(0, 0.1, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 4, 4]
}

[sub_resource type="Animation" id="Animation_5fv5d"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SlideMas:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SlideMas:process_mode")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Label:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("VolMas:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("SlideMus:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("SlideMus:process_mode")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("VolMus:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("SlideSFX:process_mode")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("SlideSFX:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("VolSFX:modulate")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("Voltar:process_mode")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("Voltar:modulate")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("Label2:modulate")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/13/type = "value"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("Continuar:modulate")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/14/type = "value"
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/path = NodePath("Continuar:process_mode")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/15/type = "value"
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/path = NodePath("AjuVol:modulate")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/16/type = "value"
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/path = NodePath("AjuVol:process_mode")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/17/type = "value"
tracks/17/imported = false
tracks/17/enabled = true
tracks/17/path = NodePath("VoltarMenu:modulate")
tracks/17/interp = 1
tracks/17/loop_wrap = true
tracks/17/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/18/type = "value"
tracks/18/imported = false
tracks/18/enabled = true
tracks/18/path = NodePath("VoltarMenu:process_mode")
tracks/18/interp = 1
tracks/18/loop_wrap = true
tracks/18/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_blljv"]
_data = {
"Appear": SubResource("Animation_gxj6e"),
"Pausa": SubResource("Animation_coijd"),
"RESET": SubResource("Animation_5fv5d")
}

[node name="Pausa" type="Popup"]
size = Vector2i(1280, 720)
visible = true
transparent = true
script = ExtResource("1_nomq2")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0, 0, 0, 0.380392)

[node name="Volumes" type="Sprite2D" parent="."]
position = Vector2(640, 360)
texture = ExtResource("2_wme5e")

[node name="Label" type="Label" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = 450.0
offset_top = 50.0
offset_right = 851.0
offset_bottom = 185.0
text = "Volumes"
label_settings = SubResource("LabelSettings_5m400")

[node name="SlideMas" type="HSlider" parent="."]
process_mode = 4
modulate = Color(1, 1, 1, 0)
offset_left = 411.0
offset_top = 247.0
offset_right = 640.0
offset_bottom = 263.0
scale = Vector2(2, 2)
value = 100.0

[node name="VolMas" type="Label" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = 535.0
offset_top = 205.0
offset_right = 745.0
offset_bottom = 253.0
text = "Volume Geral"
label_settings = SubResource("LabelSettings_lkglo")

[node name="SlideMus" type="HSlider" parent="."]
process_mode = 4
modulate = Color(1, 1, 1, 0)
offset_left = 411.0
offset_top = 347.0
offset_right = 640.0
offset_bottom = 363.0
scale = Vector2(2, 2)
value = 100.0

[node name="VolMus" type="Label" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = 522.0
offset_top = 305.0
offset_right = 758.0
offset_bottom = 353.0
text = "Volume Música"
label_settings = SubResource("LabelSettings_lkglo")

[node name="SlideSFX" type="HSlider" parent="."]
process_mode = 4
modulate = Color(1, 1, 1, 0)
offset_left = 411.0
offset_top = 453.0
offset_right = 640.0
offset_bottom = 469.0
scale = Vector2(2, 2)
value = 100.0

[node name="VolSFX" type="Label" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = 549.0
offset_top = 405.0
offset_right = 731.0
offset_bottom = 453.0
text = "Volume SFX"
label_settings = SubResource("LabelSettings_lkglo")

[node name="Voltar" type="TextureButton" parent="."]
process_mode = 4
modulate = Color(1, 1, 1, 0)
offset_left = 470.0
offset_top = 540.0
offset_right = 810.0
offset_bottom = 604.0
texture_normal = SubResource("GradientTexture1D_v26lx")
stretch_mode = 0

[node name="Label" type="Label" parent="Voltar"]
layout_mode = 1
offset_left = 54.0
offset_top = 8.0
offset_right = 294.0
offset_bottom = 56.0
text = "Voltar à pausa"
label_settings = SubResource("LabelSettings_yqg3s")

[node name="Label2" type="Label" parent="."]
offset_left = 471.0
offset_right = 809.0
offset_bottom = 135.0
text = "Ajustes"
label_settings = SubResource("LabelSettings_o34oh")

[node name="Continuar" type="Button" parent="."]
offset_left = 411.0
offset_top = 220.0
offset_right = 640.0
offset_bottom = 251.0
scale = Vector2(2, 2)
text = "Continuar"

[node name="AjuVol" type="Button" parent="."]
offset_left = 411.0
offset_top = 370.0
offset_right = 640.0
offset_bottom = 401.0
scale = Vector2(2, 2)
text = "Volumes"

[node name="VoltarMenu" type="Button" parent="."]
offset_left = 411.0
offset_top = 520.0
offset_right = 640.0
offset_bottom = 551.0
scale = Vector2(2, 2)
text = "Voltar ao menu"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_blljv")
}

[connection signal="button_down" from="Voltar" to="." method="_on_voltar_button_down"]
[connection signal="pressed" from="Voltar" to="." method="_on_voltar_pressed" flags=18]
[connection signal="button_down" from="AjuVol" to="." method="_on_aju_vol_button_down"]
[connection signal="button_down" from="VoltarMenu" to="." method="_on_voltar_menu_button_down"]
